--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -9,8 +9,8 @@ body {
 .badge {
     padding-left: 9px;
     padding-right: 9px;
-    -webkit-border-radius: 9px;
-    -moz-border-radius: 9px;
+    /* -webkit-border-radius: 9px;
+    -moz-border-radius: 9px; */
     border-radius: 9px;
 }
 
@@ -37,8 +37,11 @@ a, a:hover, a:focus {
     background: #fff;
     border: none;
     border-radius: 0;
+    margin-bottom: 0px;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
 }
+
+
 
 .nav-fix-top {
     position: sticky; 
@@ -69,23 +72,6 @@ a, a:hover, a:focus {
     margin-top: 10px !important;
 }
 
-
-/* #page-container {
-  position: relative;
-  min-height: 100%;
-}
-
-#content-wrap {
-  padding-bottom: 3.4rem;    
-}
-
-#footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 3.4rem;            
-} */
-
 .footer-fix-bottom {
     margin-top: 40px;
     padding-top: 20px;
@@ -103,7 +89,7 @@ a, a:hover, a:focus {
 }
 
 .wrapper{
-    min-height: calc(100vh - 236px);
+    min-height: calc(100vh - 255px);
     padding-top: 40px;
 
 }
@@ -114,37 +100,11 @@ a, a:hover, a:focus {
 
 
 }
-/* footer {
 
-}
-
-
-
-footer {
- 
-} */
 footer a {
     color: #f8f9fa!important
 }
 
-
-/* .footer-fix-bottom {
-    position: sticky; 
-    z-index: 20; 
-    bottom:  0;
-}
-
-.test-footer {
-     position: fixed;
- left: 0;
- bottom: 0;
- width: 100%;
- background-color: red;
-  color: white;
-  text-align: center;
-} */
-
-/* base end */
 
 
 
@@ -256,379 +216,7 @@ footer a {
 /* home end  */
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* *************************** delete from here***************************** */
-
-
-
-
-/* 
-.pablo {
-    background-size: contain;
-    background-position: center center;
-    background-repeat: no-repeat;
-    height: 450px;
-    width: 300px;
-    margin: 0 auto;
-
-} */
-
-
-
-
-
-
-
-
-/* .icon-bar {
-    background-color: #fff;
-}
-.label-warning[href], */
-
-
-
-
-/* .product-card {
-
-    width: 150px;
-    height: 150px;
-    margin: 0 auto;
-} */
-
-
-/* 
-.product-details {
-    background-size: contain;
-    background-position: center center;
-    background-repeat: no-repeat;
-    width: 300px;
-    height: 300px;
-    margin: 0 auto;
-} */
-
-/* caption p {
-    word-wrap: break-word;
-}
-
-.row.row-flex {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 30px;
-}
-
-.panel-default {
-    border-color: transparent;
-    padding: 0 10px;
-}
-
-.panel-body {
-    height: 100%;
-    border: 1px solid #ddd;
-}
-
-.product-description {
-    min-height: 40px;
-} */
-
-/* ----------- */
-/* test css */
-
-
-
-/* .line {
-    width: 100%;
-    height: 1px;
-    border-bottom: 1px dashed #ddd;
-    margin: 40px 0;
-} */
-
-/* ---------------------------------------------------
-    SIDEBAR STYLE
------------------------------------------------------ */
-
-/* .wrapper {
-    display: flex;
-    width: 100%;
-    align-items: stretch;
-    perspective: 1500px;
-} */
-
-/* Product card testing  */
-
-
-/* .btn-products-filter{
-    color: black;
-    background-color: #ffffffd7;
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    width:120px;
-    margin: 5px;
-    transition-duration: 0.5s
-}
-
-.btn-products-filter:hover{
-    color: black;
-    background-color: #7386D5;
-    transition-duration: 0.5s;
-}
-
-.image-size{
-    height:100%;
-    width:auto;
-} */
-
-
-
-/* Product details  */
-
-/*********************************************
-        		Theme Elements
-*********************************************/
-
-/* .gold{
-	color: #FFBF00;
-} */
-
-/*********************************************
-					PRODUCTS
-*********************************************/
-
-
-
-
-
-
-/* 
-
-.product-rating{
-	font-size: 20px;
-	margin-bottom: 25px;
-}
- */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* 
-.product-stock{
-	color: #74DF00;
-	font-size: 20px;
-	margin-top: 10px;
-} */
-
-
-
-/*********************************************
-					VIEW
-*********************************************/
-
-
-
-/*********************************************
-				ITEM 
-*********************************************/
-
-/* .service1-items {
-	padding: 0px 0 0px 0;
-	float: left;
-	position: relative;
-	overflow: hidden;
-	max-width: 100%;
-	height: 321px;
-	width: 130px;
-}
-
-.service1-item {
-	height: 107px;
-	width: 120px;
-	display: block;
-	float: left;
-	position: relative;
-	padding-right: 20px;
-	border-right: 1px solid #DDD;
-	border-top: 1px solid #DDD;
-	border-bottom: 1px solid #DDD;
-}
-
-.service1-item > img {
-	max-height: 110px;
-	max-width: 110px;
-	opacity: 0.6;
-	transition: all .2s ease-in;
-	-o-transition: all .2s ease-in;
-	-moz-transition: all .2s ease-in;
-	-webkit-transition: all .2s ease-in;
-}
-
-.service1-item > img:hover {
-	cursor: pointer;
-	opacity: 1;
-}
-
-.service-image-left {
-	padding-right: 50px;
-}
-
-.service-image-right {
-	padding-left: 50px;
-}
-
-.service-image-left > center > img,.service-image-right > center > img{
-	max-height: 155px;
-} */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* .div1 {
-  width: 300px;
-  height: 100px;
-  border: 1px solid blue;
-}
-
-
-
-.top-navbar {
-    margin-bottom: 0px;
-
-}
-
-.bottom-nav {
-    background: #716A66;
-
-} */
-
-
-
-
-
-/*
-** Style Simple Ecommerce Theme for Bootstrap 4
-** Created by T-PHP https://t-php.fr/43-theme-ecommerce-bootstrap-4.html
-*/
-/* .bloc_left_price {
-    color: #c01508;
-    text-align: center;
-    font-weight: bold;
-    font-size: 150%;
-}
-.category_block li:hover {
-    background-color: #007bff;
-}
-.category_block li:hover a {
-    color: #ffffff;
-}
-.category_block li a {
-    color: #343a40;
-}
-.add_to_cart_block .price {
-    color: #c01508;
-    text-align: center;
-    font-weight: bold;
-    font-size: 200%;
-    margin-bottom: 0;
-}
-.add_to_cart_block .price_discounted {
-    color: #343a40;
-    text-align: center;
-    text-decoration: line-through;
-    font-size: 140%;
-}
-.product_rassurance {
-    padding: 10px;
-    margin-top: 15px;
-    background: #ffffff;
-    border: 1px solid #6c757d;
-    color: #6c757d;
-}
-.product_rassurance .list-inline {
-    margin-bottom: 0;
-    text-transform: uppercase;
-    text-align: center;
-}
-.product_rassurance .list-inline li:hover {
-    color: #343a40;
-}
-.reviews_product .fa-star {
-    color: gold;
-}
-
-
-
-
-
-
-
-.padding-left-0 {
-    padding-left: 0px;
-}
-
-.margin-l-r-0 {
-    margin-left: 0px;
-    margin-right: 0px;
-}
-
-.no-side-margin {
-    margin-left: 0px;
-    margin-right: 0px;
-}
-
-.delete-button {
-    margin-left: 15px;
-}
-
-
-
-
- */
-
 /* Error page styling start */
-
 .error-code {
    margin-bottom: 20px;
   color: #facf5a;
@@ -668,10 +256,7 @@ footer a {
 
 
 
-.navbar{
-    margin-bottom: 0px;
 
-}
 
 @media (max-width: 992px) {
     .navbar-header {
