--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -208,6 +208,16 @@ footer a {
 
 /* home start */
 
+
+.products-filters {
+    padding-top: 20px;
+ 
+}
+
+.btn-products-filter {
+    margin-left: 10px;
+    margin-right: 10px;
+}
 /* home end  */
 
 
