formating html on home page

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -56,13 +56,12 @@
             </div>
         </div>
     </div>
-                <div  class="d-lg-none text-center">
-                <div>
-                <img src="https://cycleology.s3-eu-west-1.amazonaws.com/media/images/skull-image.png" alt="">
+    <div  class="d-lg-none text-center">
+        <div>
+            <img src="https://cycleology.s3-eu-west-1.amazonaws.com/media/images/skull-image.png" alt="skull">
+        </div>
 
-                </div>
-
-            </div>
+    </div>
 </div>
 
 {% endblock %}
