--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -221,6 +221,20 @@ footer a {
 /* home end  */
 
 
+
+
+/* contact start  */
+
+.contact-send {
+    padding-top: 20px;
+}
+
+/* contact end */
+
+
+
+
+
 /* Error page styling start */
 .error-code {
    margin-bottom: 20px;
