changing contact form inputs

--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -14,13 +14,13 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="md-form mb-0">
-                                <input type="text" name="name" class="form-control" required id="form_name" placeholder="Your name">
+                                <input type="text" id="name" name="name" class="form-control" required  placeholder="Your name">
                                 <label for="name" class="">Your name</label>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="md-form mb-0">
-                                <input type="email" name="from_email" class="form-control" required id="form_email" placeholder="name@example.com">
+                                <input type="email" id="from_email" name="from_email" class="form-control" required  placeholder="name@example.com">
                                 <label for="email" class="">Your email</label>
                             </div>
                         </div>
