reverting everything back to normal

--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -37,7 +37,7 @@
                         <div class="col-md-12">
 
                             <div class="md-form">
-                                <textarea class="form-control" id="form_message" rows="3" required name="message"></textarea>
+                                <textarea class="form-control" id="form_message" rows="3" required name="text"></textarea>
                                 <label for="message">Your message</label>
                             </div>
 
