changing id's on form

--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -14,13 +14,13 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="md-form mb-0">
-                                <input type="text" id="name" name="name" class="form-control" required  placeholder="Your name">
+                                <input type="text" id="form_name" name="name" class="form-control" required  placeholder="Your name">
                                 <label for="name" class="">Your name</label>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="md-form mb-0">
-                                <input type="email" id="from_email" name="from_email" class="form-control" required  placeholder="name@example.com">
+                                <input type="email" id="form_email" name="from_email" class="form-control" required  placeholder="name@example.com">
                                 <label for="email" class="">Your email</label>
                             </div>
                         </div>
@@ -28,7 +28,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="md-form mb-0">
-                                <input type="text" id="subject" name="subject" class="form-control" required>
+                                <input type="text" id="form_subject" name="subject" class="form-control" required>
                                 <label for="subject" class="">Subject</label>
                             </div>
                         </div>
