--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -14,13 +14,13 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="md-form mb-0">
-                                <input type="text" id="form_name" name="name" class="form-control" required  placeholder="Your name">
+                                <input type="text" id="form_name" name="user_name" class="form-control" required  placeholder="Your name">
                                 <label for="name" class="">Your name</label>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="md-form mb-0">
-                                <input type="email" id="form_email" name="from_email" class="form-control" required  placeholder="name@example.com">
+                                <input type="email" id="form_email" name="uesr_email" class="form-control" required  placeholder="name@example.com">
                                 <label for="email" class="">Your email</label>
                             </div>
                         </div>
@@ -37,7 +37,7 @@
                         <div class="col-md-12">
 
                             <div class="md-form">
-                                <textarea class="form-control" id="form_message" rows="3" required name="text"></textarea>
+                                <textarea rows="3" id="form_message" name="text" class="form-control"  required ></textarea>
                                 <label for="message">Your message</label>
                             </div>
 
