fixing error in spelling on form

--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -20,7 +20,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="md-form mb-0">
-                                <input type="email" id="form_email" name="uesr_email" class="form-control" required  placeholder="name@example.com">
+                                <input type="email" id="form_email" name="user_email" class="form-control" required  placeholder="name@example.com">
                                 <label for="email" class="">Your email</label>
                             </div>
                         </div>
