--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -1,71 +1,64 @@
 {% extends 'base.html' %} {% block content %}
-
-<div class="container mt-4">
-</div>
-
+<div class="container mt-4"></div>
 <div class="account-form">
-    <section class="mb-4">
-        <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
-        <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within a matter of hours to help you.</p>
-        <div class="row">
-            <div class="col-md-9 mb-md-0 mb-5">
-                <form action="{% url 'send_email' %}" required method="POST">
-                    {% csrf_token %}
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="md-form mb-0">
-                                <input type="text" id="form_name" name="user_name" class="form-control" required  placeholder="Your name">
-                                <label for="name" class="">Your name</label>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="md-form mb-0">
-                                <input type="email" id="form_email" name="user_email" class="form-control" required  placeholder="name@example.com">
-                                <label for="email" class="">Your email</label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="md-form mb-0">
-                                <input type="text" id="form_subject" name="subject" class="form-control" required>
-                                <label for="subject" class="">Subject</label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-
-                            <div class="md-form">
-                                <textarea rows="3" id="form_message" name="text" class="form-control"  required ></textarea>
-                                <label for="message">Your message</label>
-                            </div>
-
-                        </div>
-                    <div class="text-center text-md-left">
-                        <button type="submit" class="btn btn-success">Send</button>
-                    </div>
-                    </div>
-                    
-                    <div class="status"></div>
-                </form>
-
-            </div>
-            <div class="col-md-3 text-center">
-                <ul class="list-unstyled mb-0">
-                    <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                    <p><a  target="_blank" href="https://goo.gl/maps/YE22FfBT7F31D1kQA">Celbridge, Co Kildare, Ireland</a></p>
-                    </li>
-                    <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                    <p><a href="tel:+35314326647">+ 353 1 432 6647</a></p>
-                    </li>
-                    <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                    <p><a href="mailto:contact@cycleology.com">contact@cycleology.com</a></p>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
+	<section class="mb-4">
+		<h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
+		<p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within a matter of hours to help you.</p>
+		<div class="row">
+			<div class="col-md-9 mb-md-0 mb-5">
+				<form action="{% url 'send_email' %}" required method="POST">{% csrf_token %}
+					<div class="row">
+						<div class="col-md-6">
+							<div class="md-form mb-0">
+								<label for="name" class="">Your name</label>
+                                <input type="text" id="form_name" name="user_name" class="form-control" required placeholder="Your name">
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="md-form mb-0">
+                            	<label for="email" class="">Your email</label>
+								<input type="email" id="form_email" name="user_email" class="form-control" required placeholder="name@example.com">
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<div class="md-form mb-0">
+                            	<label for="subject" class="">Subject</label>
+								<input type="text" id="form_subject" name="subject" class="form-control" required>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<div class="md-form">
+                            	<label for="message">Your message</label>
+								<textarea rows="3" id="form_message" name="text" class="form-control" required></textarea>
+							</div>
+							<div class="text-center text-md-left contact-send">
+								<button type="submit" class="btn btn-success">Send</button>
+							</div>
+						</div>
+					</div>
+				</form>
+			</div>
+			<div class="col-md-3 text-center">
+				<ul class="list-unstyled mb-0">
+					<li><i class="fas fa-map-marker-alt fa-2x"></i>
+						<p><a target="_blank" href="https://goo.gl/maps/YE22FfBT7F31D1kQA">Celbridge, Co Kildare, Ireland</a>
+						</p>
+					</li>
+					<li><i class="fas fa-phone mt-4 fa-2x"></i>
+						<p><a href="tel:+35314326647">+ 353 1 432 6647</a>
+						</p>
+					</li>
+					<li><i class="fas fa-envelope mt-4 fa-2x"></i>
+						<p><a href="mailto:contact@cycleology.com">contact@cycleology.com</a>
+						</p>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</section>
 </div>
-
 {% endblock %}
