--- a/home/templates/contact_success.html
+++ b/home/templates/contact_success.html
@@ -1,9 +1,15 @@
 {% extends 'base.html' %} {% block content %}
 
-<div class="account-form">
-    <div class="mt-5">
-        <h4>Your message has been sent, we get back to you as soon as possible</h4>
-    </div>
+
+<div class="row">
+	<div class="container">
+		<h3 class="error-text">Your message has been sent,</h3>
+        <h3 class="error-text">we get back to you as soon as possible</h3>
+		<div class="text-center">
+			<a href="{% url 'products' %}" type="button"  class="btn  btn-lg  error-button">Return to Shop</a>
+		</div>
+	</div>
 </div>
+
 
 {% endblock %}
