adding extra div on regisitration pages

--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -2,8 +2,9 @@
 {% block title %}Setting New password{% endblock %}
 
 {% block content %}
+    <div class="account-form">
     {% if validlink %}
-        <p>Please enter your new password twice.<br />
+            <p>Please enter your new password twice.<br />
            So we can verify you typed it in correctly.</p>
         <form action="" method="post" class="accountform">
             <div style="display:none">
@@ -32,4 +33,5 @@
         possibly because it has already been used. <br />
         Please request a new password reset.</p>
     {% endif %}
+    </div>
 {% endblock %}
