--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -6,5 +6,5 @@
 <div class="account-form">
     <p>Your password has been set.  You may go ahead and log in now.</p>
     <p><a href="{{ login_url }}">Log in</a></p>
-<div class="account-form">
+</div>
 {% endblock %}
